--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,12 +4,12 @@ steps:
 - id: docker-build
   name: 'gcr.io/cloud-builders/docker'
   entrypoint: sh
-  args: ['-c', 'docker build -t $_GOOGLE_REGISTRY_URL/$_IMAGE_NAME:$SHORT_SHA -t $_GOOGLE_REGISTRY_URL/$_IMAGE_NAME:$(cat VERSION) . -f docker/Dockerfile']
+  args: ['-c', 'docker build -t $_GOOGLE_REGISTRY_URL/$_IMAGE_NAME:2.0.0 -t $_GOOGLE_REGISTRY_URL/$_IMAGE_NAME:1.0.0 . ']
 
 substitutions:
   _GOOGLE_REGISTRY_URL: ${_LOCATION}-docker.pkg.dev/${PROJECT_ID}/${_GOOGLE_REPOSITORY}
-  _IMAGE_NAME: docs-as-code
-  _GOOGLE_REPOSITORY: release
+  _IMAGE_NAME: solitaire
+  _GOOGLE_REPOSITORY: mesutguzel
   _LOCATION: us-central1
 
 images:
