--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,6 +5,12 @@ steps:
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'solitaire', '--image', 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:tag1', '--region', 'us-central1']
+  args: ['run', 'deploy', 'solitaire', '--image', 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:tag1', '--region', 'us-central1', "--platform=managed",
+    "--concurrency=default",
+    "--max-instances=default",
+    "--region=us-central1",
+    "--port=80",
+    "--timeout=60s",
+    "--allow-unauthenticated",]
 images:
 - 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:tag1'
