--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,4 +13,4 @@ steps:
     "--timeout=60s",
     "--allow-unauthenticated",]
 images:
-- 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION)'
+- 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image'
