--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,13 +6,13 @@ steps:
 
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: gcloud
-  args: ['run', 'deploy', 'solitaire', '--image', 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION)', '--region', 'us-central1', "--platform=managed",
+  entrypoint: sh
+  args: ['-c','run deploy solitaire --image us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION) --region us-central1 "--platform=managed",
     "--concurrency=default",
     "--max-instances=default",
     "--region=us-central1",
     "--port=80",
     "--timeout=60s",
-    "--allow-unauthenticated",]
+    "--allow-unauthenticated"']
 images:
 - 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image'
