--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: sh
-  args: ['-c','run deploy solitaire --image us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION) --region us-central1 --platform=managed \
+  args: ['-c','gcloud run deploy solitaire --image us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION) --region us-central1 --platform=managed \
     --concurrency=default \
     --max-instances=default \
     --region=us-central1 \
