--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,9 @@ steps:
   args: ['-c', 'docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION) . ']
   # args: [ 'build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION)', '.' ]
 
+- id: push
+  name: gcr.io/cloud-builders/docker
+  args: ["push", "-a", "us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION)"]
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: sh
