--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,8 @@ steps:
 
 - id: push
   name: gcr.io/cloud-builders/docker
-  args: ["push", "us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION)"]
+  entrypoint: sh
+  args: ['-c', 'docker push us-central1-docker.pkg.dev/$PROJECT_ID/quickstart-docker-repo/quickstart-image:$(cat VERSION)']
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: sh
